# xrcache

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
doc/: .gitignore  caching.ipynb  caching_dataset.ipynb
tests/: test_cache.py
xrcache/: __init__.py
